--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,8 +62,8 @@ body {
 }
 
 .h1 {
-    font-family: 'Georgia', Times, 'Times New Roman', serif;
-    color: #4aaaa5;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: black;
     font-size: 30px;
 }
 /*CONTENT AREA*/
@@ -81,7 +81,7 @@ body {
 }
 
 .p {
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #777777;
     line-height: 26px;
     margin-top: 20px;
